# social

./: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
api/: main.py
api/config/: settings.py  url_router.py  urls.py
api/database/: README.md  base.py
api/database/models/: test.py  user.py
api/models/migrations/: 0001_initial.py
api/models/models/service/: user.py
api/routers/: tests.py
api/schemas/: tests.py
api/tests/: test_db.py
api/user/: serializers.py  views.py
api/utils/: patterns.py
